Fix hdfs tests and fixture usage